--- a/app/src/main/res/layout/fragment_prestamo.xml
+++ b/app/src/main/res/layout/fragment_prestamo.xml
@@ -20,16 +20,39 @@
 
    </androidx.recyclerview.widget.RecyclerView>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/BtnAgregar"
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:id="@+id/BtnExtend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="18.5dp"
-        android:layout_marginBottom="22dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:src="@drawable/ic_add_24"
+        app:fab_addButtonColorNormal="@color/Orange"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
-        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
+        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck">
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/BtnAgregar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            app:fab_colorNormal="@color/Orange"
+            app:fab_icon="@drawable/ic_add_prestamo"
+            app:fab_title="Agregar" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/BtnUpdate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            app:fab_colorNormal="@color/Orange"
+            app:fab_icon="@drawable/ic_update_24"
+            app:fab_title="Actualizar" />
+
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
