--- a/app/src/main/res/layout/lista_libro.xml
+++ b/app/src/main/res/layout/lista_libro.xml
@@ -12,65 +12,162 @@
     >
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:layout_height="150dp"
         >
+        <LinearLayout
+            android:id="@+id/colorCint"
+            android:layout_width="8dp"
+            android:layout_height="150dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:background="?attr/backgroundColor"
+            android:orientation="vertical" />
 
-        <TextView
-            android:id="@+id/TvName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_toEndOf="@id/IvCover"
-            android:layout_toRightOf="@+id/IvCover"
-            android:text="Nombre del libro"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-        <TextView
-            android:id="@+id/TvAuthor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Autor"
-            android:textStyle="bold"
-            android:layout_below="@+id/TvName"
-            android:layout_toEndOf="@id/IvCover"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
-            />
-        <TextView
-            android:id="@+id/TvGenre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Genero"
-            android:textStyle="bold"
-            android:layout_below="@+id/TvAuthor"
-            android:layout_toEndOf="@id/IvCover"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
-            />
-        <TextView
-            android:id="@+id/TvPageCount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Paginas"
-            android:textStyle="bold"
-            android:layout_below="@+id/TvGenre"
-            android:layout_toEndOf="@id/IvCover"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
-            />
+        <LinearLayout
+            android:id="@+id/separete"
+            android:layout_width="1dp"
+            android:layout_height="150dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="95dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/teal_200"
+            android:orientation="vertical" />
+
         <TextView
             android:id="@+id/TvId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ID"
-            android:textStyle="bold"
-            android:layout_below="@+id/TvPageCount"
-            android:layout_toEndOf="@id/IvCover"
-            android:layout_marginLeft="10dp"
+            android:layout_alignParentTop="true"
             android:layout_marginStart="10dp"
-            />
+            android:layout_marginTop="10dp"
+            android:layout_toEndOf="@+id/colorCint"
+            android:text="ID"
+            android:textSize="40dp"
+            android:textStyle="bold"
+            app:autoSizeTextType="uniform" />
+
+        <TextView
+            android:id="@+id/TvName"
+            android:layout_width="265dp"
+            android:layout_height="25dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="35dp"
+            android:layout_marginEnd="15dp"
+            android:text="Nombre del libro"
+            app:autoSizeTextType="uniform"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="260dp"
+            android:layout_height="3dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="60dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="20dp"
+            android:background="@color/teal_200"
+            android:orientation="horizontal" />
+
+
+        //Relative layout conteniendo autores
+
+        <RelativeLayout
+            android:id="@+id/RvAutores"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="140dp"
+            android:layout_marginBottom="0dp">
+
+            <TextView
+                android:id="@+id/titleAutor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="150dp"
+                android:layout_marginBottom="50dp"
+                android:gravity="center_horizontal"
+                android:text="Nombre de autor"
+                android:textColor="@color/teal_700"
+                android:textSize="15dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/TvAuthor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/titleAutor"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="26dp"
+                android:layout_marginEnd="250dp"
+                android:text="Autor"
+                android:textSize="15dp"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true">
+
+            <TextView
+                android:id="@+id/titleGenero"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="50dp"
+                android:layout_marginBottom="50dp"
+                android:gravity="center_horizontal"
+                android:text="Genero"
+                android:textColor="@color/teal_700"
+                android:textSize="15dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/TvGenre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/titleGenero"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="26dp"
+                android:textSize="15dp"
+                android:text="Genero"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+
+
+        <TextView
+            android:id="@+id/TittlePage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="50dp"
+            android:layout_toEndOf="@+id/colorCint"
+            android:text="Paginas"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+
+
+        <TextView
+            android:id="@+id/TvPageCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="30dp"
+            android:layout_toEndOf="@+id/colorCint"
+            android:text="Paginas"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+
 
     </RelativeLayout>
 
